# vin

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
examples/: hello_world.vin  repeat.vin
nix/: package.nix  shell.nix
src/: main.rs
uinput/: Cargo.toml  README.md
uinput/src/: error.rs  lib.rs
uinput/src/device/: builder.rs  device.rs
uinput/src/event/: keyboard.rs
vin-interp/: Cargo.toml
vin-interp/src/: executable.rs  interpreter.rs  lib.rs
vin-parser/: Cargo.toml  grammar.md
vin-parser/src/: grammar.rs  parser.rs
