[package]
name = "vin"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["vin-parser", "uinput", "vin-interp"]
resolver = "2"

[workspace.dependencies]
thiserror = "2.0.18"
clap = { version = "4.5.60", features = ["derive"]}
strum = { version = "0.28", features = ["derive"] }

[dependencies]
vin-interp = { path = "./vin-interp" }
clap.workspace = true
